EclipseWS/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
12:28:24 **** Incremental Build of configuration Release for project Stepper ****
make all 
Building file: ../Code/PrimitiveStepper.cpp
Invoking: AVR C++ Compiler
avr-g++ -Wall -Os -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -funsigned-char -funsigned-bitfields -fno-exceptions -mmcu=atmega644p -DF_CPU=16000000UL -MMD -MP -MF"Code/PrimitiveStepper.d" -MT"Code/PrimitiveStepper.d" -c -o "Code/PrimitiveStepper.o" "../Code/PrimitiveStepper.cpp"
../Code/PrimitiveStepper.cpp:6:77: error: ISO C++ forbids declaration of ‘Stepper’ with no type [-fpermissive]
 PrimitiveStepper::Stepper(volatile uint8_t *P, uint8_t pin, uint16_t upSpeed) {
                                                                             ^
../Code/PrimitiveStepper.cpp:6:77: error: no ‘int PrimitiveStepper::Stepper(volatile uint8_t*, uint8_t, uint16_t)’ member function declared in class ‘PrimitiveStepper’
make: *** [Code/PrimitiveStepper.o] Error 1
12:28:43 **** Incremental Build of configuration Release for project LCD ****
make all 
Invoking: Print Size
avr-size --format=avr --mcu=atmega644p LCD.elf
AVR Memory Usage
----------------
Device: atmega644p

Program:    1482 bytes (2.3% Full)
(.text + .data + .bootloader)

Data:         66 bytes (1.6% Full)
(.data + .bss + .noinit)


Finished building: sizedummy
 
12:28:43 **** Incremental Build of configuration Release for project Stepper ****
make all 
Building file: ../Code/PrimitiveStepper.cpp
Invoking: AVR C++ Compiler
avr-g++ -Wall -Os -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -funsigned-char -funsigned-bitfields -fno-exceptions -mmcu=atmega644p -DF_CPU=16000000UL -MMD -MP -MF"Code/PrimitiveStepper.d" -MT"Code/PrimitiveStepper.d" -c -o "Code/PrimitiveStepper.o" "../Code/PrimitiveStepper.cpp"
Finished building: ../Code/PrimitiveStepper.cpp
 
Building file: ../main.cpp
Invoking: AVR C++ Compiler
avr-g++ -Wall -Os -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -funsigned-char -funsigned-bitfields -fno-exceptions -mmcu=atmega644p -DF_CPU=16000000UL -MMD -MP -MF"main.d" -MT"main.d" -c -o "main.o" "../main.cpp"
In file included from ../main.cpp:12:0:
../Code/LCD.h:32:36: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  volatile uint8_t dispData[32] = {0};
                                    ^
../Code/LCD.h:33:36: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  volatile uint8_t dispUpdate[4]= {0};
                                    ^
../Code/LCD.h:32:36: warning: extended initializer lists only available with -std=c++11 or -std=gnu++11 [enabled by default]
  volatile uint8_t dispData[32] = {0};
                                    ^
../Code/LCD.h:33:36: warning: extended initializer lists only available with -std=c++11 or -std=gnu++11 [enabled by default]
  volatile uint8_t dispUpdate[4]= {0};
                                    ^
../main.cpp:16:1: error: ‘Stepper’ does not name a type
 Stepper stepA(&PORTD,0,5000);
 ^
../main.cpp: In function ‘void __vector_13()’:
../main.cpp:20:2: error: ‘stepA’ was not declared in this scope
  stepA.update();
  ^
../main.cpp: In function ‘int main()’:
../main.cpp:32:2: error: ‘stepA’ was not declared in this scope
  stepA.setSpeed(200*3);
  ^
make: *** [main.o] Error 1
12:28:53 **** Incremental Build of configuration Release for project LCD ****
make all 
Building file: ../Code/PrimitiveStepper.cpp
Invoking: AVR C++ Compiler
avr-g++ -Wall -Os -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -funsigned-char -funsigned-bitfields -fno-exceptions -mmcu=atmega644p -DF_CPU=16000000UL -MMD -MP -MF"Code/PrimitiveStepper.d" -MT"Code/PrimitiveStepper.d" -c -o "Code/PrimitiveStepper.o" "../Code/PrimitiveStepper.cpp"
Finished building: ../Code/PrimitiveStepper.cpp
 
Building target: LCD.elf
Invoking: AVR C++ Linker
avr-g++ -Wl,-Map,LCD.map,--cref -mrelax -Wl,--gc-sections -mmcu=atmega644p -o "LCD.elf"  ./Code/LCD.o ./Code/PrimitiveStepper.o  ./PWMLed.o ./main.o   
Finished building target: LCD.elf
 
Invoking: AVR Create Extended Listing
avr-objdump -h -S LCD.elf  >"LCD.lss"
Finished building: LCD.lss
 
Create Flash image (ihex format)
avr-objcopy -R .eeprom -R .fuse -R .lock -R .signature -O ihex LCD.elf  "LCD.hex"
Finished building: LCD.hex
 
Create eeprom image (ihex format)
avr-objcopy -j .eeprom --no-change-warnings --change-section-lma .eeprom=0 -O ihex LCD.elf  "LCD.eep"
Finished building: LCD.eep
 
Invoking: Print Size
avr-size --format=avr --mcu=atmega644p LCD.elf
AVR Memory Usage
----------------
Device: atmega644p

Program:    1482 bytes (2.3% Full)
(.text + .data + .bootloader)

Data:         66 bytes (1.6% Full)
(.data + .bss + .noinit)


Finished building: sizedummy
 
12:28:54 **** Incremental Build of configuration Release for project Stepper ****
make all 
Building file: ../main.cpp
Invoking: AVR C++ Compiler
avr-g++ -Wall -Os -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -funsigned-char -funsigned-bitfields -fno-exceptions -mmcu=atmega644p -DF_CPU=16000000UL -MMD -MP -MF"main.d" -MT"main.d" -c -o "main.o" "../main.cpp"
In file included from ../main.cpp:12:0:
../Code/LCD.h:32:36: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  volatile uint8_t dispData[32] = {0};
                                    ^
../Code/LCD.h:33:36: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  volatile uint8_t dispUpdate[4]= {0};
                                    ^
../Code/LCD.h:32:36: warning: extended initializer lists only available with -std=c++11 or -std=gnu++11 [enabled by default]
  volatile uint8_t dispData[32] = {0};
                                    ^
../Code/LCD.h:33:36: warning: extended initializer lists only available with -std=c++11 or -std=gnu++11 [enabled by default]
  volatile uint8_t dispUpdate[4]= {0};
                                    ^
Finished building: ../main.cpp
 
Building target: Stepper.elf
Invoking: AVR C++ Linker
avr-g++ -Wl,-Map,Stepper.map,--cref -mrelax -Wl,--gc-sections -mmcu=atmega644p -o "Stepper.elf"  ./Code/LCD.o ./Code/PrimitiveStepper.o  ./main.o   
Finished building target: Stepper.elf
 
Invoking: AVR Create Extended Listing
avr-objdump -h -S Stepper.elf  >"Stepper.lss"
Finished building: Stepper.lss
 
Create Flash image (ihex format)
avr-objcopy -R .eeprom -R .fuse -R .lock -R .signature -O ihex Stepper.elf  "Stepper.hex"
Finished building: Stepper.hex
 
Create eeprom image (ihex format)
avr-objcopy -j .eeprom --no-change-warnings --change-section-lma .eeprom=0 -O ihex Stepper.elf  "Stepper.eep"
Finished building: Stepper.eep
 
Invoking: Print Size
avr-size --format=avr --mcu=atmega644p Stepper.elf
AVR Memory Usage
----------------
Device: atmega644p

Program:    1566 bytes (2.4% Full)
(.text + .data + .bootloader)

Data:         57 bytes (1.4% Full)
(.data + .bss + .noinit)


Finished building: sizedummy
 
